deploy/node-red/node-red-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red
  namespace: node-red
  labels:
    app: node-red
spec:
  ports:
    - port: 1880
  selector:
    app: node-red
  type: ClusterIP
